# shelter

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
app/: README.md  gradle.properties  settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  buildings_repo.py  cache.py  config.py  directions.py  geocode.py  main.py  models.py  pois_repo.py  ratelimit.py  shade_service.py  trees_repo.py  weather.py
backend/app/db/: __init__.py  ingest.py  postgis_repo.py  schema.sql
backend/data/: sample_buildings.geojson  sample_pois.geojson  sample_walk_network.geojson
backend/tests/: conftest.py  test_api.py  test_cache.py  test_directions.py  test_geocode.py  test_guards.py  test_improvements.py  test_osm_backend.py  test_phase3.py  test_postgis_mapping.py  test_ratelimit.py  test_routes.py  test_shade_service.py  test_weather_kma.py
deploy/: oracle-setup.sh  render-ingest.ps1
docs/: DEPLOY_ORACLE.md  DEPLOY_RENDER.md  DEV_PLAN.md  PRD.md  PRODUCTION.md
shade-engine/: README.md  pyproject.toml
shade-engine/scripts/: fetch_district.py  fetch_walk_network.py  shp_to_buildings.py
shade-engine/shade_engine/: __init__.py  buildings.py  comfort.py  demo.py  engine.py  geo.py  osm_graph.py  osm_routing.py  overpass.py  raycast.py  routing.py  suggest.py  sun.py  trees.py  viz.py
shade-engine/tests/: test_building_index.py  test_comfort.py  test_engine.py  test_geo.py  test_osm_graph.py  test_osm_routing.py  test_overpass.py  test_raycast.py  test_routing.py  test_suggest.py  test_sun.py  test_trees.py
(+41 files in other folders)
