[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shelter-backend"
version = "0.1.0"
description = "Shelter 경로 그늘 판정 API (Phase 1 MVP)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
# shade_engine(형제 패키지)과 backend 루트를 import 경로에 추가
pythonpath = [".", "../shade-engine"]
testpaths = ["tests"]
